--- a/project/templates/index.html
+++ b/project/templates/index.html
@@ -1,5 +1,19 @@
 {% extends 'layout.html' %}
 
+{% block title %}France By Numbers{% endblock %}
+
 {% block body %}
-<h1 class="m0 lh1">7:02</h1><p class="m0 lh1">Hours of sleep each night</p>
+<div class="container">
+  <div class="clearfix">
+    <div class="col-1-of-3">
+      <h1 class="m0 lh1">7:02</h1><p class="m0 lh1">Hours of sleep each night</p>
+    </div>
+    <div class="col-1-of-3">
+      <h1 class="m0 lh1">3.4</h1><p class="m0 lh1">Metro rides per day</p>
+    </div>
+    <div class="col-1-of-3">
+      <h1 class="m0 lh1">142</h1><p class="m0 lh1">Photos taken </p>
+    </div>
+  </div>
+</div>
 {% endblock %}
