--- a/project/templates/layout.html
+++ b/project/templates/layout.html
@@ -6,6 +6,9 @@
 
     <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/style.css') }}">
 
+    <script src="http://www.google.com/jsapi"></script>
+    <script type="text/javascript" src="{{ url_for('static', filename='js/chartkick.js') }}"></script>
+
     <link href='http://fonts.googleapis.com/css?family=Roboto:300,400,700,700italic,300italic,400italic,900,900italic' rel='stylesheet' type='text/css'>
   </head>
   {% endblock %}
