--- a/project/templates/index.html
+++ b/project/templates/index.html
@@ -22,4 +22,7 @@
 <div class="container">
   {% pie_chart workingChart %}
 </div>
+<div class="container">
+  <iframe width='100%' height='500px' frameBorder='0' src='https://a.tiles.mapbox.com/v4/sophstad.16ca1003/attribution,zoompan,zoomwheel,geocoder,share.html?access_token=pk.eyJ1Ijoic29waHN0YWQiLCJhIjoiOTc1YTY0MjZkMThiY2VlNGUxMzU1OGIwM2FiYzRhNTgifQ.W5NL4LnIO0_ZRcSIKOkXDA'></iframe>
+</div>
 {% endblock %}
