--- a/project/static/css/style.css
+++ b/project/static/css/style.css
@@ -25,11 +25,17 @@ p {
 .bold {
   font-weight: 700;
 }
+.medium {
+  font-weight: 400;
+}
 .lh1 {
   line-height: 1;
 }
 .m0 {
   margin: 0;
+}
+.mb2 {
+  margin-bottom: 2rem;
 }
 
 /* Columns */
@@ -39,8 +45,13 @@ p {
   display: table;
 }
 .clearfix:after { clear: both; }
-.col-1-of-3 {
-  box-sizing: border-box;
+.col {
   float: left;
+  box-sizing: border-box;
+}
+.col-4 {
   width: 33.333333%;
+}
+.col-12 {
+  width: 100%;
 }
