--- a/project/templates/layout.html
+++ b/project/templates/layout.html
@@ -18,4 +18,10 @@
     {% block body %}{% endblock %}
 
   </body>
+  
+  <footer>
+    <div class="container">
+      <p>&#169; <a href="http://sophiestadler.com">Sophie Stadler</a></p>
+    </div>
+  </footer>
 </html>
