--- a/static/css/style.css
+++ b/static/css/style.css
@@ -34,9 +34,8 @@ p {
 .m0 {
   margin: 0;
 }
-.mb2 {
-  margin-bottom: 2rem;
-}
+.mb1 { margin-bottom: 1rem; }
+.mb2 { margin-bottom: 2rem; }
 
 /* Columns */
 .clearfix:before,
@@ -49,9 +48,6 @@ p {
   float: left;
   box-sizing: border-box;
 }
-.col-4 {
-  width: 33.333333%;
-}
-.col-12 {
-  width: 100%;
-}
+.col-4 { width: 33.333333%; }
+.col-6 { width: 50%; }
+.col-12 { width: 100%; }
