--- a/project/templates/index.html
+++ b/project/templates/index.html
@@ -9,13 +9,16 @@
       <h1 class="m0 lh1">6:47</h1><p class="m0 lh1">Time asleep each night</p>
     </div>
     <div class="col col-4 mb2">
-      <h1 class="m0 lh1">{{ metroAverage }}</h1><p class="m0 lh1">Metro rides per day</p>
+      <h1 class="m0 lh1">{{ metro_average }}</h1><p class="m0 lh1">Metro rides per day</p>
     </div>
     <div class="col col-4 mb2">
       <h1 class="m0 lh1">283</h1><p class="m0 lh1">Photos taken</p>
     </div>
     <div class="col col-4 mb2">
-      <h1 class="m0 lh1">{{ temperatureAverage }}&#176;F</h1><p class="m0 lh1">Average temperature</p>
+      <h1 class="m0 lh1">{{ temperature_average }}&#176;F</h1><p class="m0 lh1">Average temperature</p>
+    </div>
+    <div class="col col-4 mb2">
+      <h1 class="m0 lh1">{{ sunny_days }}</h1><p class="m0 lh1">Sunny days</p>
     </div>
     <div class="col col-12">
       <p class="bold mb1">What are you doing?</p>
@@ -28,10 +31,21 @@
     <div class="col col-6">
       <p class="bold mb1">Commentary on Activities</p>
     </div>
+    <!-- <div class="col col-12">
+      <p class="bold mb1">What are you listening to?</p>
+      <p>
+        {% for artist, quantity in music_dict|dictsort(false, 'value')|reverse %}
+          <span class="medium">{{ artist }}</span> ({{ quantity }}){% if not loop.last %},{% endif %}
+        {% endfor %}
+      </p>
+    </div> -->
   </div>
 </div>
 <div class="container">
-  {% pie_chart workingChart %}
+  {% pie_chart working_chart %}
+</div>
+<div class="container">
+  {% pie_chart music_dict %}
 </div>
 <div class="container">
   <iframe width='100%' height='500px' frameBorder='0' src='https://a.tiles.mapbox.com/v4/sophstad.16ca1003/attribution,zoompan,zoomwheel,geocoder,share.html?access_token=pk.eyJ1Ijoic29waHN0YWQiLCJhIjoiOTc1YTY0MjZkMThiY2VlNGUxMzU1OGIwM2FiYzRhNTgifQ.W5NL4LnIO0_ZRcSIKOkXDA'></iframe>
