--- a/project/templates/layout.html
+++ b/project/templates/layout.html
@@ -10,6 +10,7 @@
     <script type="text/javascript" src="{{ url_for('static', filename='js/chartkick.js') }}"></script>
 
     <link href='http://fonts.googleapis.com/css?family=Roboto:300,400,700,700italic,300italic,400italic,900,900italic' rel='stylesheet' type='text/css'>
+    <link href='https://fonts.googleapis.com/css?family=Roboto+Mono:400,300,300italic,400italic,500,500italic,700,700italic,100,100italic' rel='stylesheet' type='text/css'>
   </head>
   {% endblock %}
 
@@ -19,9 +20,9 @@
 
   </body>
   
-  <footer>
+  <footer class="mt2 mb2">
     <div class="container">
-      <p>&#169; <a href="http://sophiestadler.com">Sophie Stadler</a></p>
+      <p>&#169; <a class="border-bottom" href="http://sophiestadler.com">Sophie Stadler</a></p>
     </div>
   </footer>
 </html>
