--- a/project/templates/layout.html
+++ b/project/templates/layout.html
@@ -4,6 +4,8 @@
   <head>
     <title>{% block title %}{% endblock %}</title>
 
+    <meta name="viewport" content="width=device-width,initial-scale=1">
+
     <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/style.css') }}">
 
     <script src="http://www.google.com/jsapi"></script>
