fix clearfix typo

--- a/project/templates/index.html
+++ b/project/templates/index.html
@@ -54,7 +54,7 @@
 </div>
 
 <div class="container">
-  <div class="clearix mt2 mb2">
+  <div class="clearfix mt2 mb2">
     <div class="col col-12">
       <p class="bold mb1">What are you doing?</p>
       <p>
