--- a/project/templates/layout.html
+++ b/project/templates/layout.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   {% block head %}
   <head>
     <title>{% block title %}{% endblock %}</title>
 
+    <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1">
 
     <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/style.css') }}">
@@ -11,8 +12,7 @@
     <script src="http://www.google.com/jsapi"></script>
     <script type="text/javascript" src="{{ url_for('static', filename='js/chartkick.js') }}"></script>
 
-    <link href='http://fonts.googleapis.com/css?family=Roboto:300,400,700,700italic,300italic,400italic,900,900italic' rel='stylesheet' type='text/css'>
-    <link href='https://fonts.googleapis.com/css?family=Roboto+Mono:400,300,300italic,400italic,500,500italic,700,700italic,100,100italic' rel='stylesheet' type='text/css'>
+    <link href='https://fonts.googleapis.com/css?family=Roboto+Mono:300,300italic,500,500italic' rel='stylesheet' type='text/css'>
   </head>
   {% endblock %}
 
@@ -24,7 +24,7 @@
   
   <footer class="mt2 mb2">
     <div class="container">
-      <p>&#169; <a class="border-bottom" href="http://sophiestadler.com">Sophie Stadler</a></p>
+      <p>&#169; <a href="https://sophiestadler.com" class="border-bottom">Sophie Stadler</a> • <a href="/about" class="border-bottom">About</a></p>
     </div>
   </footer>
 </html>
