direct link to general bias heading

--- a/project/templates/about.html
+++ b/project/templates/about.html
@@ -14,14 +14,14 @@
         This site makes use of <a href="http://flask.pocoo.org" class="border-bottom">Flask</a>, <a href="http://pythonhosted.org/Frozen-Flask/" class="border-bottom">Frozen Flask</a>, <a href="https://github.com/mher/chartkick.py" class="border-bottom">Chartkick</a>, <a href="http://last.fm" class="border-bottom">Last.fm</a>, and <a href="http://foursquare.com" class="border-bottom">Foursquare</a>, among other services. You can check it out on <a href="https://github.com/sophstad/france" class="border-bottom">GitHub</a>.
       </p>
 
-      <h2>Biases</h2>
+      <h2 id="bias">Biases</h2>
       <p>I&rsquo;d also like to discuss some of the possible biases in my data.</p>
-      <h3 id="activity-bias">Activities</h3>
+      <h3>Activities</h3>
       <p>
         The most recorded response to &ldquo;What are you doing?&rdquo; was &ldquo;On the computer.&rdquo; I can say with 100% certainty that I didn&rsquo;t spend most of my time in France on the computer. However, the likelihood that I would report my activities while simply sitting around was much higher. This, I imagine, is why the frequency of reports for sedentary activities is so high, and why my constant excursions around the city are represented much less in the data.
       </p>
 
-      <h3 id="music-bias">Music</h3>
+      <h3>Music</h3>
       <p>
         Music data is less comprehensive than I would have liked due to Spotify&rsquo;s offline listening mode. This state, which I used whenever I wasn&rsquo;t at home, disables scrobbling to Last.fm. As a result, none of the music I listened to while commuting or traveling around the city was recorded. Unfortunately, I&rsquo;d say that about half of my plays went undetected as a result of this unavoidable setting.
       </p>
