add 700 weight font to avoid faux bold

--- a/project/templates/layout.html
+++ b/project/templates/layout.html
@@ -12,7 +12,7 @@
     <script src="http://www.google.com/jsapi"></script>
     <script type="text/javascript" src="{{ url_for('static', filename='js/chartkick.js') }}"></script>
 
-    <link href='https://fonts.googleapis.com/css?family=Roboto+Mono:300,300italic,500,500italic' rel='stylesheet' type='text/css'>
+    <link href='https://fonts.googleapis.com/css?family=Roboto+Mono:300,500,700' rel='stylesheet' type='text/css'>
   </head>
   {% endblock %}
 
