Fix Foursquare, add Uber
- I deleted my Foursquare account previously, so that wasn't working. Fixed!
- I dug into a bit of Uber data, which I've added to the code. It's not visible yet because I don't want to have an orphan line!

--- a/project/templates/index.html
+++ b/project/templates/index.html
@@ -38,6 +38,9 @@
     <div class="col col-3 mb2">
       <h1 class="m0 lh1">{{ report }}</h1><p class="m0 lh1 red">Total reports</p>
     </div>
+<!--     <div class="col col-3 mb2">
+      <h1 class="m0 lh1">3</h1><p class="m0 lh1 red">Ubers called</p>
+    </div> -->
   </div>
 </div>
 
