--- a/project/templates/index.html
+++ b/project/templates/index.html
@@ -10,7 +10,10 @@
     </div>
     <div class="col col-6 pl2 border-left">
       <h1 class="lh1">La France par les Chiffres</h1>
-    </div>    
+    </div>
+    <div class="col col-12 mt2">
+      <p class="center">A personal data exploration by <a href="http://sophiestadler.com" class="border-bottom">Sophie Stadler</a>.</p>
+    </div>
   </div>
 
   <div class="clearfix">
