Remove Foursquare API call - data won't be changing anyway

--- a/project/templates/index.html
+++ b/project/templates/index.html
@@ -93,9 +93,55 @@
     <div class="col col-12 mt2">
       <p class="bold mb1">Types of places I visited, according to Foursquare</p>
       <p>
-        {% for place, quantity in places|dictsort(false, 'value')|reverse %}
-          {{ place }} (<span class="red">{{ quantity }}</span>){% if not loop.last %},{% endif %}
-        {% endfor %}
+        
+          Café (<span class="red">8</span>),
+        
+          College Academic Building (<span class="red">7</span>),
+        
+          Coffee Shop (<span class="red">2</span>),
+        
+          Club House (<span class="red">1</span>),
+        
+          Train Station (<span class="red">1</span>),
+        
+          Bistro (<span class="red">1</span>),
+        
+          Garden (<span class="red">1</span>),
+        
+          Supermarket (<span class="red">1</span>),
+        
+          Metro Station (<span class="red">1</span>),
+        
+          Tech Startup (<span class="red">1</span>),
+        
+          City (<span class="red">1</span>),
+        
+          Bar (<span class="red">1</span>),
+        
+          Hardware Store (<span class="red">1</span>),
+        
+          Zoo (<span class="red">1</span>),
+        
+          Cultural Center (<span class="red">1</span>),
+        
+          Botanical Garden (<span class="red">1</span>),
+        
+          Falafel Restaurant (<span class="red">1</span>),
+        
+          Coworking Space (<span class="red">1</span>),
+        
+          Department Store (<span class="red">1</span>),
+        
+          Art Museum (<span class="red">1</span>),
+        
+          Furniture / Home Store (<span class="red">1</span>),
+        
+          Boat or Ferry (<span class="red">1</span>),
+        
+          Hospital (<span class="red">1</span>),
+        
+          Emergency Room (<span class="red">1</span>)
+        
       </p>
     </div>
 
