--- a/project/static/css/style.css
+++ b/project/static/css/style.css
@@ -1,3 +1,5 @@
+@custom-media --breakpoint-sm (min-width: 40em);
+
 body {
   background-color: #222;
   color: #fff;
@@ -27,7 +29,7 @@ a:hover {
 .container {
   margin-left: auto;
   margin-right: auto;
-  max-width: 58em;
+  max-width: 85%;
 }
 
 /* Temperature hover states */
@@ -85,6 +87,9 @@ a:hover {
   color: #fb8171;
 }
 
+.flex { display: flex; }
+.flex-wrap    { flex-wrap: wrap; }
+
 /* Columns */
 .clearfix:before,
 .clearfix:after {
@@ -96,7 +101,121 @@ a:hover {
   float: left;
   box-sizing: border-box;
 }
-.col-3 { width: 25%; }
-.col-4 { width: 33.333333%; }
-.col-6 { width: 50%; }
-.col-12 { width: 100%; }
+
+.col-right {
+  float: right;
+  box-sizing: border-box;
+}
+
+.col-1 {
+  width: calc(1/12 * 100%);
+}
+
+.col-2 {
+  width: calc(2/12 * 100%);
+}
+
+.col-3 {
+  width: calc(3/12 * 100%);
+}
+
+.col-4 {
+  width: calc(4/12 * 100%);
+}
+
+.col-5 {
+  width: calc(5/12 * 100%);
+}
+
+.col-6 {
+  width: calc(6/12 * 100%);
+}
+
+.col-7 {
+  width: calc(7/12 * 100%);
+}
+
+.col-8 {
+  width: calc(8/12 * 100%);
+}
+
+.col-9 {
+  width: calc(9/12 * 100%);
+}
+
+.col-10 {
+  width: calc(10/12 * 100%);
+}
+
+.col-11 {
+  width: calc(11/12 * 100%);
+}
+
+.col-12 {
+  width: 100%;
+}
+
+@media (min-width: 40em) {
+  .container {
+    max-width: 58rem;
+  }
+
+  .sm-col {
+    float: left;
+    box-sizing: border-box;
+  }
+
+  .sm-col-right {
+    float: right;
+    box-sizing: border-box;
+  }
+
+  .sm-col-1 {
+    width: calc(1/12 * 100%);
+  }
+
+  .sm-col-2 {
+    width: calc(2/12 * 100%);
+  }
+
+  .sm-col-3 {
+    width: calc(3/12 * 100%);
+  }
+
+  .sm-col-4 {
+    width: calc(4/12 * 100%);
+  }
+
+  .sm-col-5 {
+    width: calc(5/12 * 100%);
+  }
+
+  .sm-col-6 {
+    width: calc(6/12 * 100%);
+  }
+
+  .sm-col-7 {
+    width: calc(7/12 * 100%);
+  }
+
+  .sm-col-8 {
+    width: calc(8/12 * 100%);
+  }
+
+  .sm-col-9 {
+    width: calc(9/12 * 100%);
+  }
+
+  .sm-col-10 {
+    width: calc(10/12 * 100%);
+  }
+
+  .sm-col-11 {
+    width: calc(11/12 * 100%);
+  }
+
+  .sm-col-12 {
+    width: 100%;
+  }
+
+}
