--- a/project/templates/index.html
+++ b/project/templates/index.html
@@ -9,11 +9,11 @@
     <div class="col sm-col-4 col-12 pr2 border-right">
       <h1 class="lh1 align-right">France by Numbers</h1>
     </div>
-    <div class="col sm-col-6 col-12 pl2 border-left">
+    <div class="col sm-col-6 col-12 pl2 border-left xs-hide">
       <h1 class="lh1">La France par les Chiffres</h1>
     </div>
     <div class="col col-12 mt2">
-      <p class="center">A personal data exploration by <a href="http://sophiestadler.com" class="border-bottom">Sophie Stadler</a>.</p>
+      <p class="center">A personal data exploration<br class="lg-hide"> by <a href="http://sophiestadler.com" class="border-bottom">Sophie Stadler</a>.</p>
     </div>
   </div>
 
