--- a/project/templates/about.html
+++ b/project/templates/about.html
@@ -5,7 +5,7 @@
 {% block body %}
 <div class="container">
   <div class="clearfix">
-    <div class="col col-6">
+    <div class="col sm-col-6 col-12">
       <h1>About</h1>
       <p>
         The data presented in this report was collected using <a href="https://last.fm" class="border-bottom">Last.fm</a>, <a href="https://www.reporter-app.com" class="border-bottom">Reporter</a>, and <a href="http://www.sleepcycle.com" class="border-bottom">Sleep Cycle</a> over the course of two months in Paris. These services were super useful in helping me gain insight into my daily activities while abroad, and I&rsquo;d recommend them all.
