--- a/project/templates/layout.html
+++ b/project/templates/layout.html
@@ -25,7 +25,7 @@
   
   <footer class="mt2 mb2">
     <div class="container">
-      <p>&#169; <a href="http://sophiestadler.com" class="border-bottom">Sophie Stadler</a> • <a href="/france/about" class="border-bottom">About</a></p>
+      <p>&#169; 2015 <a href="http://sophiestadler.com" class="border-bottom">Sophie Stadler</a> • <a href="/france/about" class="border-bottom">About</a></p>
     </div>
   </footer>
 </html>
